<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.mycompany.sample</groupId>
    <artifactId>uaa-server</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <name>uaa-server</name>
    <description>OpenID Connect server made with CloudFoundry UAA</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>1.8</java.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.cloudfoundry.identity</groupId>
            <artifactId>cloudfoundry-identity-uaa</artifactId>
            <version>4.30.0</version>
            <type>war</type>
        </dependency>
    </dependencies>

    <build>
        <defaultGoal>cargo:run</defaultGoal>
        <plugins>
            <plugin>
                <groupId>org.codehaus.cargo</groupId>
                <artifactId>cargo-maven2-plugin</artifactId>
                <version>1.7.7</version>
                <configuration>
                    <container>
                        <containerId>tomcat8x</containerId>
                        <type>embedded</type>
                        <systemProperties>
                            <UAA_CONFIG_PATH>${project.basedir}/src/main/resources/config</UAA_CONFIG_PATH>
                        </systemProperties>
                    </container>
                    <configuration>
                        <properties>
                            <cargo.servlet.port>8090</cargo.servlet.port>
                            <!--<cargo.rmi.port>9205</cargo.rmi.port>-->
                            <!--<cargo.jvmargs>-XX:MaxPermSize=512m -Xms256m -Xmx3072m -Xdebug -Xnoagent -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005 -XX:+DisableExplicitGC -Xverify:none -Djava.awt.headless=true</cargo.jvmargs>-->
                        </properties>
                    </configuration>
                    <deployables>
                        <deployable>
                            <groupId>org.cloudfoundry.identity</groupId>
                            <artifactId>cloudfoundry-identity-uaa</artifactId>
                            <type>war</type>
                            <properties>
                                <context>uaa</context>
                            </properties>
                        </deployable>
                    </deployables>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
